2008-01-07  Mark Ellis <mark@mpellis.org.uk>

	* Initial code
